# CRUD_app

./: Dockerfile  docker-compose.yaml  pyproject.toml
app/: database.py  main.py  schemas.py
