[tool.poetry]
name = "todooo_app"
version = "0.1.0"
description = ""
authors = ["avasin"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100.1"
psycopg2 = "^2.9.6"
uvicorn = "^0.23.1"
SQLAlchemy = "^2.0.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
